--- a/Git.ipynb
+++ b/Git.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMyzCrBiY9SmKRNngLq/a0S",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sheikhmohoshin/gitTutorial/blob/main/Git.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -185,20 +197,30 @@
         "----\n",
         "origin  https://github.com/sheikhmohoshin/Flutter10_Ostad.git (fetch)\n",
         "origin  https://github.com/sheikhmohoshin/Flutter10_Ostad.git (push)\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "UzzN4OTygDIz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "## git push\n",
         "git push -u origin main # u means upstream relation\n",
         "branch 'main' set up to track 'origin/main'. # local repository is in sync with origin\n",
         "\n",
         "\n",
-        "## git pull\n",
+        "git pull\n",
         "\n",
         "### Combines two commands\n",
         "### git fetch: retrieves new commits from the remote repo\n",
         "### git merge: updates the local repository with the new commits from the remote repo"
       ],
       "metadata": {
-        "id": "UzzN4OTygDIz"
+        "id": "e1WWrMyBoTFB"
       },
       "execution_count": null,
       "outputs": []
