--- a/Git.ipynb
+++ b/Git.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMyzCrBiY9SmKRNngLq/a0S",
+      "authorship_tag": "ABX9TyMfBJI3hP+CvOGkkBQO3bpV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,9 +142,12 @@
         "## 01. Initialize Git to create a new local repository\n",
         "# initialize a new Git repository in your project directory\n",
         "git init # turn any folder to local repository\n",
-        "   #Display the state of the working directory and the staging area.\n",
-        "   # View the status of files, such as whether they are modified or untracked.\n",
-        "git status\n",
+        "\n",
+        "\n",
+        "\n",
+        "git status # Current branch and staging info\n",
+        "           # Display the state of the working directory and the staging area.\n",
+        "           # View the status of files, such as whether they are modified or untracked.\n",
         "----\n",
         "On branch master\n",
         "No commits yet\n",
@@ -168,6 +171,22 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "git init\n",
+        "\n",
+        "git status\n",
+        "\n",
+        "git add -A\n",
+        "\n",
+        "git commit -m \"adding ostad_batch_10-main and assignment folder\"\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "msd3N55Mqb2C"
+      }
     },
     {
       "cell_type": "code",
@@ -208,19 +227,34 @@
     {
       "cell_type": "code",
       "source": [
-        "## git push\n",
-        "git push -u origin main # u means upstream relation\n",
-        "branch 'main' set up to track 'origin/main'. # local repository is in sync with origin\n",
+        "## git push and pull\n",
         "\n",
+        "# Upload commits from the local repo to a remote repo without setting the upstream relationship\n",
+        "git push origin <branchName> # branchName i.e. origin main\n",
+        "\n",
+        "# Upload commits from the local repo to a remote repo and also set the upstream relationship\n",
+        "git push -u origin <branchName> # branchName i.e. origin main\n",
+        "git push -u origin main # u means upstream relation. Upstream relationship means that any git push or pull command used afterward does not require the inclusion of the branch name.\n",
         "\n",
         "git pull\n",
-        "\n",
         "### Combines two commands\n",
         "### git fetch: retrieves new commits from the remote repo\n",
         "### git merge: updates the local repository with the new commits from the remote repo"
       ],
       "metadata": {
         "id": "e1WWrMyBoTFB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "If you use the -u option in the first commit to the repository, it not only uploads the commit, but also establishes the upstream relationship.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "W866Mq-XrjzY"
       },
       "execution_count": null,
       "outputs": []
@@ -256,13 +290,13 @@
         "git branch -a\t# Lists all local and remote branches.\n",
         "git branch -r\t# Lists all remote branches.\n",
         "\n",
-        "git branch -M main # Name the -m branch as master\n",
+        "git branch -M main # Name the -m branch as main\n",
         "git branch -m master main # Change the -m branch name from master to main\n",
         "git branch <branchName>\t# Creates a new branch with the specified name.\n",
         "\n",
         "git checkout <branch-name>\t# Switches to the specified branch.\n",
         "git checkout -b <new-branch-name>\t# Creates a new branch and switches to it.\n",
-        "git checkout — <fileName>\t# Discards changes made to the specified file and revert it to the version in the last commit.\n"
+        "git checkout — <fileName>\t# Discards changes made to the specified file and revert it to the version in the last commit."
       ],
       "metadata": {
         "id": "viM4DrymjcLt"
