--- a/Git.ipynb
+++ b/Git.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJdRqfqyYp/ODRUBtGeqPr",
+      "authorship_tag": "ABX9TyOdLfBVIlqsYSmCV+SPJBQs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,15 +132,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "XsKM8KPStSNM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# Create a Repository\n",
@@ -241,6 +232,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Git add"
+      ],
+      "metadata": {
+        "id": "XfHjiJwkgNGZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "## Adding Files to Staging Area\n",
@@ -249,9 +249,27 @@
         "git add -u # Stages modified and deleted files only:\n",
         "git add <fileName> # Stages a specific fil:\n",
         "\n",
-        "git status # Checking the Status\n",
-        "\n",
-        "## 03. Committing Changes\n",
+        "git status # Checking the Status"
+      ],
+      "metadata": {
+        "id": "qwUp8E08uEsS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Git commit"
+      ],
+      "metadata": {
+        "id": "Vg1vxi0DgRyC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Committing Changes\n",
         "git commit -m \"adding ostad_batch_10-main and assignment folder\"\n",
         "git status\n",
         "----\n",
@@ -259,7 +277,7 @@
         "nothing to commit, working tree clean"
       ],
       "metadata": {
-        "id": "qwUp8E08uEsS"
+        "id": "pCh_-mPNgZub"
       },
       "execution_count": null,
       "outputs": []
@@ -341,6 +359,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Git branch"
+      ],
+      "metadata": {
+        "id": "6QzFN7eIf5V3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Git branch\n",
@@ -399,14 +426,41 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Git log"
+      ],
+      "metadata": {
+        "id": "fmMbPvAtf9P3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "##\n",
+        "## Git log\n",
         "git log\t#Displays the commit history of the current branch.\n",
         "git log <branch-d\t#Displays the commit history of the specified branch.\n",
         "git log –follow <file>\t#Displays the commit history of a file, including its renames.\n",
-        "git log –all\t#Displays the commit history of all branches.\n",
-        "\n",
+        "git log –all\t#Displays the commit history of all branches."
+      ],
+      "metadata": {
+        "id": "emJbF54xawU2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Git stash"
+      ],
+      "metadata": {
+        "id": "USLFKhvRf_qw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "git stash\t#Stashes the changes in the working directory, allowing you to switch to a different branch or commit without committing the changes.\n",
         "git stash list\t#Lists all stashes in the repository.\n",
         "git stash pop\t#Applies and removes the most recent stash from the stash list.\n",
