--- a/Git.ipynb
+++ b/Git.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdLfBVIlqsYSmCV+SPJBQs",
+      "authorship_tag": "ABX9TyNdwmJknIb1h5RPKnPZN06u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,42 +134,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Create a Repository\n",
-        "  **Start with a local directory**\n",
-        "  \n",
-        "  Use git init to create a local Git repository\n",
-        "  \n",
-        "  **Start with a new or existing remote repository**\n",
-        "  \n",
-        "  Use git clone to make a local copy of the Git repository"
-      ],
-      "metadata": {
-        "id": "PTI4huU5fyRq"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Initializing a Git Repository (git init)\n",
-        "git init # turn any folder to local repository\n",
-        "\n",
-        "git status # Current branch and staging info\n",
-        "           # Display the state of the working directory and the staging area.\n",
-        "           # View the status of files, such as whether they are modified or untracked.\n",
-        "----\n",
-        "On branch master\n",
-        "No commits yet\n",
-        "nothing to commit (create/copy files and use \"git add\" to track)"
-      ],
-      "metadata": {
-        "id": "CmF5v_CXfv35"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "**Important git commands: **\n",
         "* git init\n",
         "* git status\n",
@@ -184,7 +148,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Forking and Cloning a Repository\n",
+        "## Forking and Cloning a Repository\n",
         "Forking is a repository means creating a copy of an existing repository in your GitHub account so that we can make changes without affecting the original repository.\n",
         "How to Fork a Repository\n",
         "•\tGo to the repository we want to contribute to on GitHub.\n",
@@ -225,11 +189,48 @@
       "source": [
         "**Note: **\n",
         "*\tmake sure the parent directory is right.\n",
-        "*\tRenaming the main branch : git branch -m master\n"
+        "*\tRenaming the main branch : git branch -m master (tutorial later)\n"
       ],
       "metadata": {
         "id": "M4QhkDT3uLI7"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Initializing/Creating a Git Repository (git init)\n",
+        " Repository\n",
+        "  **Start with a local directory**\n",
+        "  \n",
+        "  Use git init to create a local Git repository\n",
+        "  \n",
+        "  **Start with a new or existing remote repository**\n",
+        "  \n",
+        "  Use git clone to make a local copy of the Git repository"
+      ],
+      "metadata": {
+        "id": "PTI4huU5fyRq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initializing a Git Repository (git init)\n",
+        "git init # turn any folder to local repository\n",
+        "\n",
+        "git status # Current branch and staging info\n",
+        "           # Display the state of the working directory and the staging area.\n",
+        "           # View the status of files, such as whether they are modified or untracked.\n",
+        "----\n",
+        "On branch master\n",
+        "No commits yet\n",
+        "nothing to commit (create/copy files and use \"git add\" to track)"
+      ],
+      "metadata": {
+        "id": "CmF5v_CXfv35"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -300,6 +301,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Git push and pull"
+      ],
+      "metadata": {
+        "id": "UORYxlQZgrrs"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Create Remote Repository\n",
@@ -326,8 +336,7 @@
         "git remote -v\n",
         "----\n",
         "origin  https://github.com/sheikhmohoshin/Flutter10_Ostad.git (fetch)\n",
-        "origin  https://github.com/sheikhmohoshin/Flutter10_Ostad.git (push)\n",
-        "\n"
+        "origin  https://github.com/sheikhmohoshin/Flutter10_Ostad.git (push)"
       ],
       "metadata": {
         "id": "UzzN4OTygDIz"
