--- a/Git.ipynb
+++ b/Git.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNdwmJknIb1h5RPKnPZN06u",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sheikhmohoshin/gitTutorial/blob/main/Git.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -379,17 +367,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# Git branch\n",
+        "# Git branch, checkout,& switch\n",
+        "\n",
+        "# create new branch\n",
+        "git branch <branchName>\t# Creates a new branch with the specified name.\n",
         "git branch\t# Lists all branches in the repository.\n",
+        "---\n",
+        "  feature\n",
+        "* main # * means current branch\n",
+        "# switch to new branch\n",
+        "git checkout <branch-name>\t# Switches to the specified branch.\n",
+        "git switch colab\n",
+        "---\n",
+        "Switched to branch 'colab'\n",
+        "\n",
+        "# OR\n",
+        "# create new branch and switch to it\n",
+        "git checkout -b <new-branch-name>\t# Creates a new branch and switches to it.\n",
+        "\n",
         "git branch -a\t# Lists all local and remote branches.\n",
         "git branch -r\t# Lists all remote branches.\n",
-        "\n",
         "git branch -M main # Name the -m branch as main\n",
         "git branch -m master main # Change the -m branch name from master to main\n",
-        "git branch <branchName>\t# Creates a new branch with the specified name.\n",
         "\n",
-        "git checkout <branch-name>\t# Switches to the specified branch.\n",
-        "git checkout -b <new-branch-name>\t# Creates a new branch and switches to it.\n",
         "git checkout — <fileName>\t# Discards changes made to the specified file and revert it to the version in the last commit."
       ],
       "metadata": {
@@ -448,6 +448,9 @@
       "source": [
         "## Git log\n",
         "git log\t#Displays the commit history of the current branch.\n",
+        "git log --oneline # in 1 line\n",
+        "git log --oneline --all # Displays all comit history in onelines\n",
+        "\n",
         "git log <branch-d\t#Displays the commit history of the specified branch.\n",
         "git log –follow <file>\t#Displays the commit history of a file, including its renames.\n",
         "git log –all\t#Displays the commit history of all branches."
