--- a/Git.ipynb
+++ b/Git.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0HehZpQyuvS3pip7IHO79",
+      "authorship_tag": "ABX9TyOzfPyAUE8Cf8xyvtnT6Xhe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -498,6 +498,19 @@
       ],
       "metadata": {
         "id": "KZiLx545kPlD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# git revert\n",
+        "\n",
+        "git revert commitID # d40e2c0f2530a070213950275876b44b875112ea"
+      ],
+      "metadata": {
+        "id": "S0hykBsPhl29"
       },
       "execution_count": null,
       "outputs": []
